--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "market-server",
+  "name": "termigram-server",
   "version": "0.0.1",
-  "description": "a REST API of market",
+  "description": "a REST API of social network called Termigram",
   "author": "Terminaate",
   "private": true,
   "license": "MIT",
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/swagger": "^6.1.4",
     "argon2": "^0.30.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -58,13 +59,10 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
-    "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "29.3.1",
     "mongodb-memory-server": "^8.10.2",
     "prettier": "^2.8.1",
