--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
-    "lint": "eslint \"src/**/*\" --fix && cd client && npm run lint",
+    "lint": "eslint \"src/**/*\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
