--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "prepare": "husky install",
     "prebuild": "rimraf ./dist",
     "build": "nest build",
     "start": "nest start",
@@ -59,6 +60,7 @@
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "29.3.1",
     "mongodb-memory-server": "^8.10.2",
     "prettier": "^2.8.1",
