--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/static": "^6.7.0",
     "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.1",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.4",
@@ -36,6 +38,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
+    "fastify": "^4.12.0",
     "mongoose": "^6.8.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -49,7 +52,6 @@
     "@nestjs/testing": "^9.2.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
-    "@types/express": "^4.17.15",
     "@types/jest": "29.2.5",
     "@types/node": "^18.11.18",
     "@types/passport-jwt": "^3.0.8",
